- Fixed bug #50508 (compile fails: Conflicting HEADER type declarations) # NEVER ever include nameser_compat.h, it's included in various ways in different OSes by nameser.h if needed